Bug 437893 - rendering problem on vulkan full-screen applications
Summary: rendering problem on vulkan full-screen applications
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.21.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 438618 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-31 09:21 UTC by r.kunschke
Modified: 2021-06-19 10:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.1
Sentry Crash Report:


Attachments
Thats how it looks on my screen - screenshots looking normal by the way (922.93 KB, image/jpeg)
2021-05-31 09:21 UTC, r.kunschke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description r.kunschke 2021-05-31 09:21:41 UTC
Created attachment 138892 [details]
Thats how it looks on my screen - screenshots looking normal by the way

SUMMARY
When using any vukan-application in full-screen mode there are only weird colored artifacts displayed. I noticed this behavior in the dolphin emulator and in retroarch even in the menu (which is good for testing purposes). When I am switching to the opengl backend or using windowed mode, everything is just working fine.

SOFTWARE/OS VERSIONS

Arch Linux
KDE Plasma Version: 5.21.90 from KDE unstable repository
KDE Frameworks Version: 5.83.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Intel i915 driver
mesa vulkan driver - vulkan-intel
intel hd 620
Comment 1 Vlad Zahorodnii 2021-05-31 19:03:29 UTC
Do visual artifacts persist if you disable compositing?
Comment 2 r.kunschke 2021-06-02 12:47:28 UTC
Is it even possible to disable compositing in a plasma wayland session?
I just turned the compositor to xrender and to the open gl 2/3 backend and the result was the same every time
Comment 3 Vlad Zahorodnii 2021-06-07 07:43:54 UTC
Oh, no, you can't disable compositing on Wayland. I thought that this bug report is about X11. This seems like a modifier related issue.
Comment 4 Zamundaaa 2021-06-08 15:53:57 UTC
Git commit 19f92d731aca686b1365db9b032f5ca961f5be26 by Xaver Hugl.
Committed on 08/06/2021 at 14:38.
Pushed by zamundaaa into branch 'master'.

platforms/drm: fix modifiers detection

M  +1    -1    src/plugins/platforms/drm/drm_gpu.cpp
M  +3    -0    src/plugins/platforms/drm/egl_gbm_backend.cpp

https://invent.kde.org/plasma/kwin/commit/19f92d731aca686b1365db9b032f5ca961f5be26
Comment 5 Zamundaaa 2021-06-08 15:54:20 UTC
Git commit 18c0525422a000247b5d487af77deb9428be0c0c by Xaver Hugl.
Committed on 08/06/2021 at 15:54.
Pushed by zamundaaa into branch 'Plasma/5.22'.

platforms/drm: fix modifiers detection


(cherry picked from commit 19f92d731aca686b1365db9b032f5ca961f5be26)

M  +1    -1    src/plugins/platforms/drm/drm_gpu.cpp
M  +3    -0    src/plugins/platforms/drm/egl_gbm_backend.cpp

https://invent.kde.org/plasma/kwin/commit/18c0525422a000247b5d487af77deb9428be0c0c
Comment 6 Bug Janitor Service 2021-06-08 16:41:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1083
Comment 7 Zamundaaa 2021-06-08 16:44:09 UTC
Can you test if the commit fixes the issue?
Comment 8 r.kunschke 2021-06-09 07:57:23 UTC
I installed the newest version of kwin and the problem is solved now. Thank you :)
Comment 9 Zamundaaa 2021-06-11 10:30:07 UTC
Do you mean latest git master or the newer merge request?
Comment 10 r.kunschke 2021-06-12 20:42:56 UTC
I meant in the git master.
Comment 11 Zamundaaa 2021-06-12 22:10:15 UTC
Great!
Comment 12 Vlad Zahorodnii 2021-06-15 05:53:37 UTC
*** Bug 438618 has been marked as a duplicate of this bug. ***