platforms/drm: restrict usage of implicit modifiers

With direct scanout implicit modifiers can lead to problems, as the
modifier the application chose and the implicit modifier the driver
assumes the buffer to have can be different.

BUG: 437893